# mathatura

./: Cargo.toml  README.md
.github/workflows/: pages.yml
src/: lib.rs  main.rs  render.rs
src/categories/: chaos.rs  fractals.rs  lsystems.rs  mod.rs  phyllotaxis.rs  spirals.rs  turing.rs
web/: index.html
